Britive Bridge/v1/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: britive-bridge
  labels:
    app.kubernetes.io/name: britive-bridge
